--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 
   <body>
     <div id="app"></div>
-    <input type="text" id="even" onchange="numbersEven2()" />
-    <script>
-      numbersEven2();
-    </script>
+
+    <input type="text" id="even" />
+
+    <button id="mybutton">hhh</button>
+    <button id="ajaxButton">send Request</button>
+    <div id ="ajax"></div>
+    
     <script src="src/index.js"></script>
   </body>
 </html>
