refacto ajax request

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <div id ="ajax"></div>
     
     <script src="src/index.js"></script>
+    <script src ="src/ajaxExercise.js"></script>
   </body>
 </html>
